[gd_scene load_steps=4 format=3 uid="uid://h2oco2cdnmcm"]

[ext_resource type="Script" path="res://Scripts/Enemies/aggression.gd" id="1_v01ca"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1psox"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_pj3m4"]
radius = 5.0

[node name="Aggression" type="Node3D"]
script = ExtResource("1_v01ca")

[node name="Attack Range" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 65536
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack Range"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
shape = SubResource("SphereShape3D_1psox")

[node name="Field of Vision" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 256
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Field of Vision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 5)
shape = SubResource("SphereShape3D_pj3m4")

[node name="Line of Sight" type="RayCast3D" parent="Field of Vision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 257

[connection signal="area_entered" from="Attack Range" to="." method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="Attack Range" to="." method="_on_attack_range_area_exited"]
[connection signal="body_entered" from="Field of Vision" to="." method="_on_field_of_vision_body_entered"]
[connection signal="body_exited" from="Field of Vision" to="." method="_on_field_of_vision_body_exited"]
